# arrrv

./: .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  arrrv.toml  findings.md  install.sh  mvp_plan.md  progress.md  project_plan.md  task_plan.md  test_coverage.md
.github/workflows/: ci.yml  release.yml
formula/: arrrv.rb  ruv.rb
scripts/: install.sh
src/: cache.rs  config.rs  crandb.rs  index.rs  installer.rs  lockfile.rs  main.rs  resolver.rs  version.rs
