[package]
name = "arrrv"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
indicatif = "0.18.4"
pubgrub = "0.3.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls", "json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
toml = "1.0.4"

[dev-dependencies]
tempfile = "3.26.0"
