[package]
name = "ruv"
version = "0.1.0-alpha.2"
edition = "2024"

[dependencies]
bincode = "1"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
indicatif = "0.18.4"
pubgrub = "0.3.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls", "json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
toml = "1.0.4"

[dev-dependencies]
tempfile = "3.26.0"

# Cargo-dist configuration for building and distributing binaries
[package.metadata.dist]
# Platforms to build binaries for when creating a release
targets = [
    "aarch64-apple-darwin",   # macOS ARM (M1/M2/M3/etc)
    "x86_64-apple-darwin",    # macOS Intel
    "x86_64-unknown-linux-gnu" # Linux x86_64
]
# Installer to generate (shell script for curl | sh)
installers = ["shell"]
# Create a tarball for each platform
dist = ["tarball"]
# Enable checksums for verification
checksum = "sha256"
